--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
     "dotenv": "^17.0.0",
+    "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.2",
     "hono": "^4.8.3"
   },
